# SRG-Sistemas_de_Reservas_GALE

./: .gitignore  .pylintrc  README.md  pyproject.toml  test_main.py
.github/workflows/: ci.yml
data/: clientes.json  hoteles.json  reservas.json
docs/: Correcciones 19_09_2025.txt  flujo_programa.txt
src/: __init__.py  datos.py  gestion_clientes.py  gestion_hoteles.py  gestion_reservas.py  main.py  reportes.py  test_main.py  utils.py
tests/: conftest.py  test_main.py  test_modificaciones.py
