[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "srg-sistemas-reservas-gale"
version = "0.1.0"
description = "Sistema de reservas para hoteles desarrollado en Python como TPO de AyED1 en UADE."
readme = "README.md"
requires-python = ">=3.8" # Versión mínima razonable de Python
license = {text = "MIT License"}
authors = [
  { name = "Axel Aguilar"},
  { name = "Emanuel Grossi"},
  { name = "Gianluca Chia"},
  { name = "Lautaro Salto"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "tabulate>=0.9.0",
    "colorize>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0", # Para correr las pruebas
]

[project.urls]
Homepage = "https://github.com/Lautiim/SRG-Sistemas_de_Reservas_GALE"
Repository = "https://github.com/Lautiim/SRG-Sistemas_de_Reservas_GALE"
Trello = "https://trello.com/b/LePKo6J6/srg-sistemas-de-reservas-gale"

[project.scripts]